3rdParty/Nginx-Ingress/Azure/live-agent-adapter/live-agent-adapter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-agent-adapter-ingress
spec:
  ingressClassName: nginx-asraas
  rules:
  - host: nginx-asraas.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /live-agent-adapter
        pathType: Prefix
        backend:
          service:
                name: krypton-router
                port:
                  number: 3000
